# simple-pypi

./: README.md  app.py  pyproject.toml
