[tool.poetry]
name = "simple-pypi"
version = "0.1.0"
description = ""
authors = ["Andrew Burdyug <buran83@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipython = "^8.4.0"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.13.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
